--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ plugins {
   id "lucene.validation.gradle-versions-cleanup"
   id "lucene.validation.gradlew-scripts-customizations"
 
+  id "lucene.ide.intellij-idea"
+  id "lucene.ide.eclipse"
+
   // perhaps move this to a convention plugin or remove entirely?
   id "lucene.build-infra"
 
@@ -105,10 +108,6 @@ configure(rootProject) {
     }
   }
 }
-
-// IDE support, settings and specials.
-apply from: file('gradle/ide/intellij-idea.gradle')
-apply from: file('gradle/ide/eclipse.gradle')
 
 // Maven artifact publishing.
 apply from: file('gradle/maven/publications.gradle')
