--- a/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
@@ -26,50 +26,60 @@ if (project != project.rootProject) {
 Provider<String> eclipseJavaVersionOption = buildOptions.addOption("eclipse.javaVersion", "Set Java version for Eclipse IDE", deps.versions.minJava.get())
 Provider<String> eclipseErrorsOption = buildOptions.addOption("eclipse.errors", "Sets eclipse IDE lint level (ignore/warning/error)", "warning")
 
-  if (gradle.startParameter.taskNames.contains("eclipse")) {
-    project.pluginManager.apply("java-base")
-    project.pluginManager.apply("eclipse")
+if (gradle.startParameter.taskNames.contains("eclipse")) {
+  project.pluginManager.apply("java-base")
+  project.pluginManager.apply("eclipse")
 
-    def eclipseJavaVersion = eclipseJavaVersionOption.get()
-    def relativize = { File other -> rootProject.rootDir.relativePath(other).toString() }
+  def eclipseJavaVersion = eclipseJavaVersionOption.get()
+  def relativize = { File other -> rootProject.rootDir.relativePath(other).toString() }
 
-    eclipse {
-      project {
-        name = "Apache Lucene ${version}"
-      }
+  eclipse {
+    project {
+      name = "Apache Lucene ${version}"
+    }
 
-      classpath {
-        defaultOutputDir = file('build/eclipse')
+    classpath {
+      defaultOutputDir = file('build/eclipse')
 
-        file {
-          beforeMerged { classpath -> classpath.entries.removeAll { it.kind == "src" } }
+      file {
+        beforeMerged { classpath ->
+          classpath.entries.removeAll {
+            it.kind == "src"
+          }
+        }
 
-          whenMerged { classpath ->
-            def projects = allprojects.findAll { prj ->
-              return prj.plugins.hasPlugin(JavaPlugin)
-            }
+        whenMerged { classpath ->
+          def projects = allprojects.findAll { prj ->
+            return prj.plugins.hasPlugin(JavaPlugin)
+          }
 
-            Set<String> sourceSetNames = ['main', 'test', "main${eclipseJavaVersion}" as String, "test${eclipseJavaVersion}" as String, 'tools'] as Set
-            Set<String> sources = []
-            Set<File> jars = []
-            projects.each { prj ->
-              prj.sourceSets.each { sourceSet ->
-                if (sourceSetNames.contains(sourceSet.name)) {
-                  sources += sourceSet.java.srcDirs.findAll { dir -> dir.exists() }.collect { dir -> relativize(dir) }
-                  sources += sourceSet.resources.srcDirs.findAll { dir -> dir.exists() }.collect { dir -> relativize(dir) }
-                }
+          Set<String> sourceSetNames = [
+            'main',
+            'test',
+            "main${eclipseJavaVersion}" as String,
+            "test${eclipseJavaVersion}" as String,
+            'tools'
+          ] as Set
+          Set<String> sources = []
+          Set<File> jars = []
+          projects.each { prj ->
+            prj.sourceSets.each { sourceSet ->
+              if (sourceSetNames.contains(sourceSet.name)) {
+                sources += sourceSet.java.srcDirs.findAll { dir -> dir.exists() }.collect { dir -> relativize(dir) }
+                sources += sourceSet.resources.srcDirs.findAll { dir -> dir.exists() }.collect { dir -> relativize(dir) }
               }
-
-              // This is hacky - we take the resolved compile classpath and just
-              // include JAR files from there. We should probably make it smarter
-              // by looking at real dependencies. But then: this Eclipse configuration
-              // doesn't really separate sources anyway so why bother.
-              jars += prj.configurations.compileClasspath.resolve()
-              jars += prj.configurations.testCompileClasspath.resolve()
             }
 
-            classpath.entries += sources.sort().collect { name ->
-              def sourceFolder = new SourceFolder(name, "build/eclipse/" + name)
+            // This is hacky - we take the resolved compile classpath and just
+            // include JAR files from there. We should probably make it smarter
+            // by looking at real dependencies. But then: this Eclipse configuration
+            // doesn't really separate sources anyway so why bother.
+            jars += prj.configurations.compileClasspath.resolve()
+            jars += prj.configurations.testCompileClasspath.resolve()
+          }
+
+          classpath.entries += sources.sort().collect { name ->
+            def sourceFolder = new SourceFolder(name, "build/eclipse/" + name)
             sourceFolder.setExcludes(["module-info.java"])
             return sourceFolder
           }
@@ -87,39 +97,39 @@ Provider<String> eclipseErrorsOption = buildOptions.addOption("eclipse.errors", 
     }
   }
 
-    tasks.register("luceneEclipseJdt", Sync, {
-      def errorMode = eclipseErrorsOption.get()
-        def ecjLintFile = rootProject.file('gradle/validation/ecj-lint/ecj.javadocs.prefs');
+  tasks.register("luceneEclipseJdt", Sync, {
+    def errorMode = eclipseErrorsOption.get()
+    def ecjLintFile = rootProject.file('gradle/validation/ecj-lint/ecj.javadocs.prefs');
 
-        description = 'Generates the Eclipse JDT settings file.'
+    description = 'Generates the Eclipse JDT settings file.'
 
-        inputs.file(ecjLintFile)
-        inputs.property('errorMode', errorMode)
-        inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
+    inputs.file(ecjLintFile)
+    inputs.property('errorMode', errorMode)
+    inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
 
-        from rootProject.file("${resources}/dot.settings")
-        into rootProject.file(".settings")
-        filter(ReplaceTokens, tokens: [
-                'ecj-lint-config': ecjLintFile.getText('UTF-8').replaceAll(/=error\b/, '=' + errorMode),
-                'eclipseJavaVersion': eclipseJavaVersion as String
-        ])
-        filteringCharset = 'UTF-8'
+    from rootProject.file("${resources}/dot.settings")
+    into rootProject.file(".settings")
+    filter(ReplaceTokens, tokens: [
+      'ecj-lint-config': ecjLintFile.getText('UTF-8').replaceAll(/=error\b/, '=' + errorMode),
+      'eclipseJavaVersion': eclipseJavaVersion as String
+    ])
+    filteringCharset = 'UTF-8'
 
-        doLast {
-          logger.lifecycle('Eclipse config for Java {} written with ECJ errors configured as {}. Change by altering build option eclipse.errors to ignore/warning/error.', eclipseJavaVersion, errorMode)
-          logger.lifecycle('To edit classes of MR-JARs for a specific Java version, use e.g., -Peclipse.javaVersion=19')
-        }
-      })
-
-    eclipseJdt {
-        enabled = false
-        dependsOn 'luceneEclipseJdt'
+    doLast {
+      logger.lifecycle('Eclipse config for Java {} written with ECJ errors configured as {}. Change by altering build option eclipse.errors to ignore/warning/error.', eclipseJavaVersion, errorMode)
+      logger.lifecycle('To edit classes of MR-JARs for a specific Java version, use e.g., -Peclipse.javaVersion=19')
     }
+  })
 
-    eclipseClasspath {
-      inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
-    }
+  eclipseJdt {
+    enabled = false
+    dependsOn 'luceneEclipseJdt'
   }
+
+  eclipseClasspath {
+    inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
+  }
+}
 
 public class LibEntry implements ClasspathEntry {
   private String path;
@@ -138,6 +148,6 @@ public class LibEntry implements ClasspathEntry {
     node.appendNode("classpathentry", Map.of(
         "kind", "lib",
         "path", path
-    ))
+        ))
   }
 }
