--- a/.editorconfig
+++ b/.editorconfig
@@ -40,7 +40,7 @@ ij_java_align_multiline_method_parentheses = false
 ij_java_align_multiline_parameters = false
 ij_java_align_multiline_parameters_in_calls = false
 ij_java_align_multiline_parenthesized_expression = false
-ij_java_align_multiline_records = true
+ij_java_align_multiline_records = false
 ij_java_align_multiline_resources = false
 ij_java_align_multiline_ternary_operation = false
 ij_java_align_multiline_text_blocks = false
@@ -50,16 +50,16 @@ ij_java_align_throws_keyword = false
 ij_java_align_types_in_multi_catch = true
 ij_java_annotation_new_line_in_record_component = false
 ij_java_annotation_parameter_wrap = off
-ij_java_array_initializer_new_line_after_left_brace = false
+ij_java_array_initializer_new_line_after_left_brace = true
 ij_java_array_initializer_right_brace_on_new_line = false
-ij_java_array_initializer_wrap = normal
-ij_java_assert_statement_colon_on_next_line = false
-ij_java_assert_statement_wrap = off
-ij_java_assignment_wrap = off
+ij_java_array_initializer_wrap = on_every_item
+ij_java_assert_statement_colon_on_next_line = true
+ij_java_assert_statement_wrap = normal
+ij_java_assignment_wrap = normal
 ij_java_binary_operation_sign_on_next_line = true
 ij_java_binary_operation_wrap = normal
 ij_java_blank_lines_after_anonymous_class_header = 0
-ij_java_blank_lines_after_class_header = 1
+ij_java_blank_lines_after_class_header = 0
 ij_java_blank_lines_after_imports = 1
 ij_java_blank_lines_after_package = 1
 ij_java_blank_lines_around_class = 1
@@ -78,9 +78,9 @@ ij_java_block_brace_style = end_of_line
 ij_java_block_comment_add_space = false
 ij_java_block_comment_at_first_column = true
 ij_java_builder_methods =
-ij_java_call_parameters_new_line_after_left_paren = false
+ij_java_call_parameters_new_line_after_left_paren = true
 ij_java_call_parameters_right_paren_on_new_line = false
-ij_java_call_parameters_wrap = normal
+ij_java_call_parameters_wrap = on_every_item
 ij_java_case_statement_on_separate_line = true
 ij_java_catch_on_new_line = false
 ij_java_class_annotation_wrap = split_into_lines
@@ -91,17 +91,17 @@ ij_java_deconstruction_list_wrap = normal
 ij_java_do_not_indent_top_level_class_members = false
 ij_java_do_not_wrap_after_single_annotation = false
 ij_java_do_not_wrap_after_single_annotation_in_parameter = false
-ij_java_do_while_brace_force = always
+ij_java_do_while_brace_force = never
 ij_java_doc_add_blank_line_after_description = true
 ij_java_doc_add_blank_line_after_param_comments = false
 ij_java_doc_add_blank_line_after_return = false
 ij_java_doc_add_p_tag_on_empty_lines = true
-ij_java_doc_align_exception_comments = true
-ij_java_doc_align_param_comments = true
-ij_java_doc_do_not_wrap_if_one_line = false
+ij_java_doc_align_exception_comments = false
+ij_java_doc_align_param_comments = false
+ij_java_doc_do_not_wrap_if_one_line = true
 ij_java_doc_enable_formatting = true
 ij_java_doc_enable_leading_asterisks = true
-ij_java_doc_indent_on_continuation = false
+ij_java_doc_indent_on_continuation = true
 ij_java_doc_keep_empty_lines = true
 ij_java_doc_keep_empty_parameter_tag = true
 ij_java_doc_keep_empty_return_tag = true
@@ -126,9 +126,9 @@ ij_java_entity_ri_prefix =
 ij_java_entity_ri_suffix =
 ij_java_entity_vo_prefix =
 ij_java_entity_vo_suffix = VO
-ij_java_enum_constants_wrap = off
-ij_java_enum_field_annotation_wrap = off
-ij_java_extends_keyword_wrap = off
+ij_java_enum_constants_wrap = on_every_item
+ij_java_enum_field_annotation_wrap = split_into_lines
+ij_java_extends_keyword_wrap = normal
 ij_java_extends_list_wrap = normal
 ij_java_field_annotation_wrap = split_into_lines
 ij_java_field_name_prefix =
@@ -138,32 +138,32 @@ ij_java_filter_class_suffix =
 ij_java_filter_dd_prefix =
 ij_java_filter_dd_suffix =
 ij_java_finally_on_new_line = false
-ij_java_for_brace_force = always
+ij_java_for_brace_force = never
 ij_java_for_statement_new_line_after_left_paren = false
 ij_java_for_statement_right_paren_on_new_line = false
-ij_java_for_statement_wrap = normal
+ij_java_for_statement_wrap = on_every_item
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = false
 ij_java_generate_use_type_annotation_before_type = true
-ij_java_if_brace_force = always
-ij_java_imports_layout = @*, $*, |, *
+ij_java_if_brace_force = never
+ij_java_imports_layout = @*,$*,|,*
 ij_java_indent_case_from_switch = true
-ij_java_insert_inner_class_imports = true
+ij_java_insert_inner_class_imports = false
 ij_java_insert_override_annotation = true
 ij_java_keep_blank_lines_before_right_brace = 2
 ij_java_keep_blank_lines_between_package_declaration_and_header = 2
 ij_java_keep_blank_lines_in_code = 1
 ij_java_keep_blank_lines_in_declarations = 2
 ij_java_keep_builder_methods_indents = false
-ij_java_keep_control_statement_in_one_line = false
+ij_java_keep_control_statement_in_one_line = true
 ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
 ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
-ij_java_keep_simple_blocks_in_one_line = false
-ij_java_keep_simple_classes_in_one_line = false
-ij_java_keep_simple_lambdas_in_one_line = false
-ij_java_keep_simple_methods_in_one_line = false
+ij_java_keep_simple_blocks_in_one_line = true
+ij_java_keep_simple_classes_in_one_line = true
+ij_java_keep_simple_lambdas_in_one_line = true
+ij_java_keep_simple_methods_in_one_line = true
 ij_java_label_indent_absolute = false
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
@@ -182,17 +182,17 @@ ij_java_message_eb_prefix =
 ij_java_message_eb_suffix = Bean
 ij_java_method_annotation_wrap = split_into_lines
 ij_java_method_brace_style = end_of_line
-ij_java_method_call_chain_wrap = normal
-ij_java_method_parameters_new_line_after_left_paren = false
+ij_java_method_call_chain_wrap = on_every_item
+ij_java_method_parameters_new_line_after_left_paren = true
 ij_java_method_parameters_right_paren_on_new_line = false
-ij_java_method_parameters_wrap = normal
+ij_java_method_parameters_wrap = on_every_item
 ij_java_modifier_list_wrap = false
 ij_java_multi_catch_types_wrap = normal
 ij_java_names_count_to_use_import_on_demand = 999
 ij_java_new_line_after_lparen_in_annotation = false
 ij_java_new_line_after_lparen_in_deconstruction_pattern = true
 ij_java_new_line_after_lparen_in_record_header = false
-ij_java_new_line_when_body_is_presented = false
+ij_java_new_line_when_body_is_presented = true
 ij_java_packages_to_use_import_on_demand =
 ij_java_parameter_annotation_wrap = off
 ij_java_parameter_name_prefix =
@@ -211,7 +211,7 @@ ij_java_replace_null_check = true
 ij_java_replace_sum_lambda_with_method_ref = true
 ij_java_resource_list_new_line_after_left_paren = false
 ij_java_resource_list_right_paren_on_new_line = false
-ij_java_resource_list_wrap = off
+ij_java_resource_list_wrap = on_every_item
 ij_java_rparen_on_new_line_in_annotation = false
 ij_java_rparen_on_new_line_in_deconstruction_pattern = true
 ij_java_rparen_on_new_line_in_record_header = false
@@ -242,7 +242,7 @@ ij_java_space_after_quest = true
 ij_java_space_after_type_cast = true
 ij_java_space_before_annotation_array_initializer_left_brace = false
 ij_java_space_before_annotation_parameter_list = false
-ij_java_space_before_array_initializer_left_brace = false
+ij_java_space_before_array_initializer_left_brace = true
 ij_java_space_before_catch_keyword = true
 ij_java_space_before_catch_left_brace = true
 ij_java_space_before_catch_parentheses = true
@@ -317,24 +317,24 @@ ij_java_static_field_name_prefix =
 ij_java_static_field_name_suffix =
 ij_java_subclass_name_prefix =
 ij_java_subclass_name_suffix = Impl
-ij_java_switch_expressions_wrap = normal
+ij_java_switch_expressions_wrap = on_every_item
 ij_java_ternary_operation_signs_on_next_line = true
-ij_java_ternary_operation_wrap = normal
+ij_java_ternary_operation_wrap = on_every_item
 ij_java_test_name_prefix =
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = normal
-ij_java_throws_list_wrap = off
+ij_java_throws_list_wrap = on_every_item
 ij_java_use_external_annotations = false
 ij_java_use_fq_class_names = false
 ij_java_use_relative_indents = false
 ij_java_use_single_class_imports = true
-ij_java_variable_annotation_wrap = off
+ij_java_variable_annotation_wrap = split_into_lines
 ij_java_visibility = public
-ij_java_while_brace_force = always
+ij_java_while_brace_force = never
 ij_java_while_on_new_line = false
 ij_java_wrap_comments = true
 ij_java_wrap_first_method_in_call_chain = false
-ij_java_wrap_long_lines = false
+ij_java_wrap_long_lines = true
 ij_java_wrap_semicolon_after_call_chain = false
 
 [.editorconfig]
