--- a/.editorconfig
+++ b/.editorconfig
@@ -561,22 +561,22 @@ ij_groovy_align_multiline_assignment = false
 ij_groovy_align_multiline_binary_operation = false
 ij_groovy_align_multiline_chained_methods = false
 ij_groovy_align_multiline_extends_list = false
-ij_groovy_align_multiline_for = true
-ij_groovy_align_multiline_list_or_map = true
+ij_groovy_align_multiline_for = false
+ij_groovy_align_multiline_list_or_map = false
 ij_groovy_align_multiline_method_parentheses = false
-ij_groovy_align_multiline_parameters = true
+ij_groovy_align_multiline_parameters = false
 ij_groovy_align_multiline_parameters_in_calls = false
-ij_groovy_align_multiline_resources = true
+ij_groovy_align_multiline_resources = false
 ij_groovy_align_multiline_ternary_operation = false
 ij_groovy_align_multiline_throws_list = false
-ij_groovy_align_named_args_in_map = true
+ij_groovy_align_named_args_in_map = false
 ij_groovy_align_throws_keyword = false
-ij_groovy_array_initializer_new_line_after_left_brace = false
+ij_groovy_array_initializer_new_line_after_left_brace = true
 ij_groovy_array_initializer_right_brace_on_new_line = false
-ij_groovy_array_initializer_wrap = off
-ij_groovy_assert_statement_wrap = off
-ij_groovy_assignment_wrap = off
-ij_groovy_binary_operation_wrap = off
+ij_groovy_array_initializer_wrap = on_every_item
+ij_groovy_assert_statement_wrap = normal
+ij_groovy_assignment_wrap = normal
+ij_groovy_binary_operation_wrap = normal
 ij_groovy_blank_lines_after_class_header = 0
 ij_groovy_blank_lines_after_imports = 1
 ij_groovy_blank_lines_after_package = 1
@@ -593,23 +593,23 @@ ij_groovy_block_comment_add_space = false
 ij_groovy_block_comment_at_first_column = true
 ij_groovy_call_parameters_new_line_after_left_paren = false
 ij_groovy_call_parameters_right_paren_on_new_line = false
-ij_groovy_call_parameters_wrap = off
+ij_groovy_call_parameters_wrap = on_every_item
 ij_groovy_catch_on_new_line = false
 ij_groovy_class_annotation_wrap = split_into_lines
 ij_groovy_class_brace_style = end_of_line
-ij_groovy_class_count_to_use_import_on_demand = 5
+ij_groovy_class_count_to_use_import_on_demand = 999
 ij_groovy_do_while_brace_force = never
 ij_groovy_else_on_new_line = false
 ij_groovy_enable_groovydoc_formatting = true
-ij_groovy_enum_constants_wrap = off
-ij_groovy_extends_keyword_wrap = off
-ij_groovy_extends_list_wrap = off
+ij_groovy_enum_constants_wrap = on_every_item
+ij_groovy_extends_keyword_wrap = normal
+ij_groovy_extends_list_wrap = normal
 ij_groovy_field_annotation_wrap = split_into_lines
 ij_groovy_finally_on_new_line = false
 ij_groovy_for_brace_force = never
 ij_groovy_for_statement_new_line_after_left_paren = false
 ij_groovy_for_statement_right_paren_on_new_line = false
-ij_groovy_for_statement_wrap = off
+ij_groovy_for_statement_wrap = on_every_item
 ij_groovy_ginq_general_clause_wrap_policy = 2
 ij_groovy_ginq_having_wrap_policy = 1
 ij_groovy_ginq_indent_having_clause = true
@@ -618,19 +618,19 @@ ij_groovy_ginq_on_wrap_policy = 1
 ij_groovy_ginq_space_after_keyword = true
 ij_groovy_if_brace_force = never
 ij_groovy_import_annotation_wrap = 2
-ij_groovy_imports_layout = *, |, javax.**, java.**, |, $*
+ij_groovy_imports_layout = @*,$*,|,*
 ij_groovy_indent_case_from_switch = true
 ij_groovy_indent_label_blocks = true
 ij_groovy_insert_inner_class_imports = false
 ij_groovy_keep_blank_lines_before_right_brace = 2
-ij_groovy_keep_blank_lines_in_code = 2
+ij_groovy_keep_blank_lines_in_code = 1
 ij_groovy_keep_blank_lines_in_declarations = 2
 ij_groovy_keep_control_statement_in_one_line = true
 ij_groovy_keep_first_column_comment = true
 ij_groovy_keep_indents_on_empty_lines = false
 ij_groovy_keep_line_breaks = true
 ij_groovy_keep_multiple_expressions_in_one_line = false
-ij_groovy_keep_simple_blocks_in_one_line = false
+ij_groovy_keep_simple_blocks_in_one_line = true
 ij_groovy_keep_simple_classes_in_one_line = true
 ij_groovy_keep_simple_lambdas_in_one_line = true
 ij_groovy_keep_simple_methods_in_one_line = true
@@ -643,20 +643,20 @@ ij_groovy_line_comment_add_space_on_reformat = false
 ij_groovy_line_comment_at_first_column = true
 ij_groovy_method_annotation_wrap = split_into_lines
 ij_groovy_method_brace_style = end_of_line
-ij_groovy_method_call_chain_wrap = off
-ij_groovy_method_parameters_new_line_after_left_paren = false
+ij_groovy_method_call_chain_wrap = on_every_item
+ij_groovy_method_parameters_new_line_after_left_paren = true
 ij_groovy_method_parameters_right_paren_on_new_line = false
-ij_groovy_method_parameters_wrap = off
+ij_groovy_method_parameters_wrap = on_every_item
 ij_groovy_modifier_list_wrap = false
-ij_groovy_names_count_to_use_import_on_demand = 3
-ij_groovy_packages_to_use_import_on_demand = java.awt.*, javax.swing.*
+ij_groovy_names_count_to_use_import_on_demand = 999
+ij_groovy_packages_to_use_import_on_demand =
 ij_groovy_parameter_annotation_wrap = off
 ij_groovy_parentheses_expression_new_line_after_left_paren = false
 ij_groovy_parentheses_expression_right_paren_on_new_line = false
 ij_groovy_prefer_parameters_wrap = false
 ij_groovy_resource_list_new_line_after_left_paren = false
 ij_groovy_resource_list_right_paren_on_new_line = false
-ij_groovy_resource_list_wrap = off
+ij_groovy_resource_list_wrap = on_every_item
 ij_groovy_space_after_assert_separator = true
 ij_groovy_space_after_colon = true
 ij_groovy_space_after_comma = true
@@ -665,7 +665,7 @@ ij_groovy_space_after_for_semicolon = true
 ij_groovy_space_after_quest = true
 ij_groovy_space_after_type_cast = true
 ij_groovy_space_before_annotation_parameter_list = false
-ij_groovy_space_before_array_initializer_left_brace = false
+ij_groovy_space_before_array_initializer_left_brace = true
 ij_groovy_space_before_assert_separator = false
 ij_groovy_space_before_catch_keyword = true
 ij_groovy_space_before_catch_left_brace = true
@@ -714,7 +714,7 @@ ij_groovy_spaces_around_relational_operators = true
 ij_groovy_spaces_around_shift_operators = true
 ij_groovy_spaces_within_annotation_parentheses = false
 ij_groovy_spaces_within_array_initializer_braces = false
-ij_groovy_spaces_within_braces = true
+ij_groovy_spaces_within_braces = false
 ij_groovy_spaces_within_brackets = false
 ij_groovy_spaces_within_cast_parentheses = false
 ij_groovy_spaces_within_catch_parentheses = false
@@ -731,19 +731,19 @@ ij_groovy_spaces_within_try_parentheses = false
 ij_groovy_spaces_within_tuple_expression = false
 ij_groovy_spaces_within_while_parentheses = false
 ij_groovy_special_else_if_treatment = true
-ij_groovy_ternary_operation_wrap = off
-ij_groovy_throws_keyword_wrap = off
-ij_groovy_throws_list_wrap = off
+ij_groovy_ternary_operation_wrap = on_every_item
+ij_groovy_throws_keyword_wrap = normal
+ij_groovy_throws_list_wrap = on_every_item
 ij_groovy_use_flying_geese_braces = false
 ij_groovy_use_fq_class_names = false
 ij_groovy_use_fq_class_names_in_javadoc = true
 ij_groovy_use_relative_indents = false
 ij_groovy_use_single_class_imports = true
-ij_groovy_variable_annotation_wrap = off
+ij_groovy_variable_annotation_wrap = split_into_lines
 ij_groovy_while_brace_force = never
 ij_groovy_while_on_new_line = false
 ij_groovy_wrap_chain_calls_after_dot = false
-ij_groovy_wrap_long_lines = false
+ij_groovy_wrap_long_lines = true
 
 [*.json]
 ij_json_array_wrapping = split_into_lines
