--- a/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
@@ -27,5 +27,7 @@ allprojects { project ->
 
     plugins.apply("lucene.java.tests-and-randomization")
     plugins.apply("lucene.java.per-project-test-summary")
+
+    plugins.apply("lucene.validation.forbidden-apis")
   }
 }
