--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -41,6 +41,8 @@ spotless.format("gradleScripts", GroovyGradleExtension.class, { ext ->
 tasks.named("spotlessGradleScripts").configure {
   mustRunAfter ":lucene:build-tools:build-infra-shadow:spotlessJava"
   mustRunAfter ":lucene:build-tools:missing-doclet:spotlessJava"
+  mustRunAfter ":lucene:build-tools:missing-doclet:renderJavadoc"
+  mustRunAfter ":lucene:build-tools:build-infra-shadow:pluginUnderTestMetadata"
 }
 
 tasks.named("tidy").configure {
